# scraping-sample

./: README.md  main.py  pyproject.toml
scraping/e_kanagawa/: hadano.py
