[tool.poetry]
name = "scraping-sample"
version = "0.1.0"
description = ""
authors = ["sho sato <oydgw36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.19.0"
chromedriver-binary-auto = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
